Fixed the overflowing text in the posibility section

--- a/src/containers/blog/blog.css
+++ b/src/containers/blog/blog.css
@@ -22,7 +22,7 @@
 }
 
 .gpt3__blog-container_groupA {
-  flex: 0.75;
+  flex: 1;
   margin-right: 2rem;
 }
 
