--- a/src/containers/possibility/possibility.css
+++ b/src/containers/possibility/possibility.css
@@ -1,6 +1,7 @@
 .gpt3__possibility {
   display: flex;
   flex-direction: row;
+  gap: 2rem;
 }
 
 .gpt3__possibility-image {
@@ -8,7 +9,6 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  margin-right: 2rem;
 }
 
 .gpt3__possibility-image img {
@@ -18,11 +18,11 @@
 
 .gpt3__possibility-content {
   flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* justify-content: flex-end; */
   /* justify-content: center; */
-  align-items: flex-start;
+  align-self: flex-end;
 }
 
 .gpt3__possibility-content h4 {
@@ -50,7 +50,7 @@
   color: var(--color-subtext);
 }
 
-@media screen and (max-width: 950px) {
+@media screen and (max-width: 990px) {
   .gpt3__possibility {
     flex-direction: column;
   }
